[package]
name = "videofix"
version = "0.1.0"
edition = "2021"

# See more keys and their definitions at https://doc.rust-lang.org/cargo/reference/manifest.html

[dependencies]
anyhow = "1.0.100"
clap = { version = "4.5.54", features = ["derive"] }
directories = "6.0.0"
env_logger = "0.11.6"
ffprobe = "0.4.0"
itertools = "0.14.0"
log = "0.4.29"
serde = "1.0.228"
serde_gura = "0.2.0"
terminal_size = "0.4.3"
